# solana-resources-api

./: .gitignore  LICENSE  README.md
api/: Cargo.toml  up.sql
api/migrations/2023-02-04-041621_solana_resources_api/: down.sql  up.sql
api/src/: controller.rs  main.rs  resource.rs  schema.rs
